--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./core/server.js",
+    "pub": "nodemon ./core/mqtt/pub.js",
+    "sub": "nodemon ./core/mqtt/sub.js"
+  },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "mqtt": "^5.2.0",
-    "pg": "^8.11.3"
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "ejs": "3.1.9",
+    "express": "4.18.2",
+    "mqtt": "5.2.0",
+    "pg": "8.11.3",
+    "sequelize": "6.35.0"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.20"
   }
 }
