--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "mqtt": "5.2.0",
     "pg": "8.11.3",
     "sequelize": "6.35.0"
+    
   },
   "devDependencies": {
-    "nodemon": "2.0.20"
+    "nodemon": "2.0.20",
+    "sequelize-cli": "6.2.0"
   }
 }
