refactor/db-config-and-remove-old-config-file

--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,21 @@
 # mqtt config
-MQTT_HOST =
-MQTT_PORT = 
+MQTT_HOST = 
+MQTT_PORT =
 
 #web server config
 PORT = 
 HOST_NAME = 
+NODE_ENV = 
 
-#database config
+#database config (we use supabase to host postgres)
 DB_HOST = 
 DB_PORT = 
-DB_USER = 
+DB_USERNAME = 
 DB_PASSWORD = 
 DB_NAME = 
+DIALECT = 
+DB_SSL = 
+DB_URI = 
+
+SUPABASE_URL = 
+SUPABASE_KEY = 
