--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "sub": "nodemon ./core/mqtt/sub.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.4",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "nodemon": "2.0.20",
-    "sequelize-cli": "6.2.0"
+    "sequelize-cli": "6.2.0",
+    "supabase": "^1.112.0"
   }
 }
