--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./core/server.js",
-    "pub": "nodemon ./core/mqtt/pub.js",
-    "sub": "nodemon ./core/mqtt/sub.js"
+    "start": "nodemon ./core/server.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
