--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
+    "bcrypt": "^5.0.1",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
