--- a/.env.template
+++ b/.env.template
@@ -1,21 +1,14 @@
-# mqtt config
-MQTT_HOST = 
-MQTT_PORT =
+#epxress server config
 
-#web server config
-PORT = 
-HOST_NAME = 
-NODE_ENV = 
+PORT=
+HOST=
+HOST_URL=
 
-#database config (we use supabase to host postgres)
-DB_HOST = 
-DB_PORT = 
-DB_USERNAME = 
-DB_PASSWORD = 
-DB_NAME = 
-DIALECT = 
-DB_SSL = 
-DB_URI = 
+#firebase database config
 
-SUPABASE_URL = 
-SUPABASE_KEY = 
+API_KEY=
+AUTH_DOMAIN=
+PROJECT_ID=
+STORAGE_BUCKET=
+MESSAGING_SENDER_ID=
+APP_ID=
