--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
     "start": "nodemon ./core/server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.38.4",
     "bcrypt": "^5.0.1",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
     "express": "4.18.2",
-    "mqtt": "5.2.0",
-    "pg": "8.11.3",
-    "sequelize": "6.35.0"
+    "firebase": "^10.11.0",
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
-    "nodemon": "2.0.20",
-    "sequelize-cli": "6.2.0",
-    "supabase": "^1.112.0"
+    "nodemon": "2.0.20"
   }
 }
