--- a/hms-api-documents.yaml
+++ b/hms-api-documents.yaml
@@ -466,25 +466,48 @@ paths:
   #       - petstore_auth:
   #           - write:pets
   #           - read:pets
-  # /store/inventory:
-  #   get:
-  #     tags:
-  #       - store
-  #     summary: Returns pet inventories by status
-  #     description: Returns a map of status codes to quantities
-  #     operationId: getInventory
-  #     responses:
-  #       "200":
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               additionalProperties:
-  #                 type: integer
-  #                 format: int32
-  #     security:
-  #       - api_key: []
+  /staff/supportstaff:
+    get:
+      tags:
+        - supportstaff
+      summary: Xem thông tin nhân viên hỗ trợ
+      description: Xem thông tin tất cả nhân viên hỗ trợ trong bệnh viện
+      operationId: getSupportStaff
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SupportStaff"
+        "404":
+          description: Support staff not found
+    post:
+      tags:
+        - supportstaff
+      summary: Thêm nhân viên hỗ trợ mới
+      description: Thêm nhân viên hỗ trợ mới
+      operationId: addSupportStaff
+      requestBody:
+        description: Thêm nhân viên hỗ trợ mới vào cơ sở dữ liệu
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AddSupportStaff"
+          application/xml:
+            schema:
+              $ref: "#/components/schemas/AddSupportStaff"
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/AddSupportStaff"
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
   # /store/order:
   #   post:
   #     tags:
@@ -514,54 +537,85 @@ paths:
   #         description: Invalid input
   #       "422":
   #         description: Validation exception
-  # /store/order/{orderId}:
-  #   get:
-  #     tags:
-  #       - store
-  #     summary: Find purchase order by ID
-  #     description: For valid response try integer IDs with value <= 5 or > 10. Other values will generate exceptions.
-  #     operationId: getOrderById
-  #     parameters:
-  #       - name: orderId
-  #         in: path
-  #         description: ID of order that needs to be fetched
-  #         required: true
-  #         schema:
-  #           type: integer
-  #           format: int64
-  #     responses:
-  #       "200":
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: "#/components/schemas/Order"
-  #           application/xml:
-  #             schema:
-  #               $ref: "#/components/schemas/Order"
-  #       "400":
-  #         description: Invalid ID supplied
-  #       "404":
-  #         description: Order not found
-  #   delete:
-  #     tags:
-  #       - store
-  #     summary: Delete purchase order by ID
-  #     description: For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors
-  #     operationId: deleteOrder
-  #     parameters:
-  #       - name: orderId
-  #         in: path
-  #         description: ID of the order that needs to be deleted
-  #         required: true
-  #         schema:
-  #           type: integer
-  #           format: int64
-  #     responses:
-  #       "400":
-  #         description: Invalid ID supplied
-  #       "404":
-  #         description: Order not found
+  /staff/supportstaff/{supportstaff_id}:
+    get:
+      tags:
+        - supportstaff
+      summary: Xem thông tin nhân viên hỗ trợ
+      description: Xem thông tin nhân viên hỗ trợ theo id
+      operationId: getSupportStaffById
+      parameters:
+        - name: supportstaff_id
+          in: path
+          description: "Id của nhân viên hỗ trợ cần xem chi tiết. Dùng T2g3cyzImX69qpWh5nuN để test"
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SupportStaff"
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/SupportStaff"
+        "400":
+          description: Invalid supportstaff_id supplied
+        "404":
+          description: Order not found
+    put:
+      tags:
+        - supportstaff
+      summary: Cập nhật thông tin của nhân viên hỗ trợ
+      description: Cập nhật thông tin của nhân viên hỗ trợ
+      operationId: updateSupportStaffById
+      parameters:
+        - name: supportstaff_id
+          in: path
+          description: "Id của nhân viên hỗ trợ cần xem chi tiết. Dùng T2g3cyzImX69qpWh5nuN để test"
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Cập nhật thông tin của nhân viên hỗ trợ
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AddSupportStaff"
+          application/xml:
+            schema:
+              $ref: "#/components/schemas/AddSupportStaff"
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/AddSupportStaff"
+        required: true
+      responses:
+        "200":
+          description: successful operation
+        "400":
+          description: Invalid supportstaff_id supplied
+        "404":
+          description: Doctor not found
+    delete:
+      tags:
+        - supportstaff
+      summary: Xóa nhân viên hỗ trợ
+      description: Xóa nhân viên hỗ trợ khỏi cơ sở dữ liệu
+      operationId: deleteSupportStaffById
+      parameters:
+        - name: supportstaff_id
+          in: path
+          description: Id của nhân viên hỗ trợ cần xoá. **Tạo 1 nhân viên hỗ trợ mới rồi lên firebase lấy id để xoá.**
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful operation
+        "400":
+          description: Invalid supportstaff_id supplied
   /user:
     post:
       tags:
@@ -951,35 +1005,64 @@ components:
         salary:
           type: integer
           example: 20000000
-    Address:
-      type: object
-      properties:
-        street:
-          type: string
-          example: 437 Lytton
-        city:
-          type: string
-          example: Palo Alto
-        state:
-          type: string
-          example: CA
-        zip:
-          type: string
-          example: "94301"
-      xml:
-        name: address
-    Category:
+    SupportStaff:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          example: 1
-        name:
           type: string
-          example: Dogs
-      xml:
-        name: category
+          example: T2g3cyzImX69qpWh5nuN
+        firstName:
+          type: string
+          example: Trump
+        lastName:
+          type: string
+          example: Donald
+        dateOfBirth:
+          type: string
+          format: date
+          example: 12/06/2002
+        age:
+          type: integer
+          example: 28
+        gender:
+          type: string
+          example: male
+        phoneNumber:
+          type: string
+          example: "5601928374"
+    AddSupportStaff:
+      required:
+        - firstName
+        - lastName
+        - dateOfBirth
+        - age
+        - gender
+        - phoneNumber
+        - salary
+      type: object
+      properties:
+        firstName:
+          type: string
+          example: SS
+        lastName:
+          type: string
+          example: Nguyen
+        dateOfBirth:
+          type: string
+          format: date
+          example: 12/31/1685
+        age:
+          type: integer
+          example: 31
+        gender:
+          type: string
+          example: male
+        phoneNumber:
+          type: string
+          example: "1224056829"
+        salary:
+          type: integer
+          example: 294620556
     User:
       type: object
       properties:
