--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
     "express": "4.18.2",
-    "firebase": "^10.11.0",
+    "firebase": "10.11.0",
     "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
