--- a/hms-api-documents.yaml
+++ b/hms-api-documents.yaml
@@ -24,18 +24,6 @@ tags:
     description: Các API liên quan đến thiết bị
   - name: drugs
     description: Các API liên quan đến thuốc
-  - name: pet
-    description: Everything about your Pets
-    externalDocs:
-      description: Find out more
-      url: http://swagger.io
-  - name: store
-    description: Access to Petstore orders
-    externalDocs:
-      description: Find out more about our store
-      url: http://swagger.io
-  - name: user
-    description: Operations about user
 paths:
   /staff:
     get:
@@ -615,10 +603,10 @@ paths:
   #       - petstore_auth:
   #           - write:pets
   #           - read:pets
-  /staff/supportstaff:
+  /staff/supportStaff:
     get:
       tags:
-        - supportstaff
+        - supportStaff
       summary: Xem thông tin nhân viên hỗ trợ
       description: Xem thông tin tất cả nhân viên hỗ trợ trong bệnh viện
       operationId: getSupportStaff
@@ -633,7 +621,7 @@ paths:
           description: Support staff not found
     post:
       tags:
-        - supportstaff
+        - supportStaff
       summary: Thêm nhân viên hỗ trợ mới
       description: Thêm nhân viên hỗ trợ mới
       operationId: addSupportStaff
@@ -657,44 +645,15 @@ paths:
           description: Invalid input
         "422":
           description: Validation exception
-  # /store/order:
-  #   post:
-  #     tags:
-  #       - store
-  #     summary: Place an order for a pet
-  #     description: Place a new order in the store
-  #     operationId: placeOrder
-  #     requestBody:
-  #       content:
-  #         application/json:
-  #           schema:
-  #             $ref: "#/components/schemas/Order"
-  #         application/xml:
-  #           schema:
-  #             $ref: "#/components/schemas/Order"
-  #         application/x-www-form-urlencoded:
-  #           schema:
-  #             $ref: "#/components/schemas/Order"
-  #     responses:
-  #       "200":
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: "#/components/schemas/Order"
-  #       "400":
-  #         description: Invalid input
-  #       "422":
-  #         description: Validation exception
-  /staff/supportstaff/{supportstaff_id}:
+  /staff/supportStaff/{supportStaff_id}:
     get:
       tags:
-        - supportstaff
+        - supportStaff
       summary: Xem thông tin nhân viên hỗ trợ
       description: Xem thông tin nhân viên hỗ trợ theo id
       operationId: getSupportStaffById
       parameters:
-        - name: supportstaff_id
+        - name: supportStaff_id
           in: path
           description: "Id của nhân viên hỗ trợ cần xem chi tiết. Dùng T2g3cyzImX69qpWh5nuN để test"
           required: true
@@ -711,17 +670,17 @@ paths:
               schema:
                 $ref: "#/components/schemas/SupportStaff"
         "400":
-          description: Invalid supportstaff_id supplied
+          description: Invalid supportStaff_id supplied
         "404":
           description: Order not found
     put:
       tags:
-        - supportstaff
+        - supportStaff
       summary: Cập nhật thông tin của nhân viên hỗ trợ
       description: Cập nhật thông tin của nhân viên hỗ trợ
       operationId: updateSupportStaffById
       parameters:
-        - name: supportstaff_id
+        - name: supportStaff_id
           in: path
           description: "Id của nhân viên hỗ trợ cần xem chi tiết. Dùng T2g3cyzImX69qpWh5nuN để test"
           required: true
@@ -749,12 +708,12 @@ paths:
           description: Doctor not found
     delete:
       tags:
-        - supportstaff
+        - supportStaff
       summary: Xóa nhân viên hỗ trợ
       description: Xóa nhân viên hỗ trợ khỏi cơ sở dữ liệu
       operationId: deleteSupportStaffById
       parameters:
-        - name: supportstaff_id
+        - name: supportStaff_id
           in: path
           description: Id của nhân viên hỗ trợ cần xoá. **Tạo 1 nhân viên hỗ trợ mới rồi lên firebase lấy id để xoá.**
           required: true
@@ -764,190 +723,7 @@ paths:
         "200":
           description: Successful operation
         "400":
-          description: Invalid supportstaff_id supplied
-  /user:
-    post:
-      tags:
-        - user
-      summary: Create user
-      description: This can only be done by the logged in user.
-      operationId: createUser
-      requestBody:
-        description: Created user object
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/User"
-          application/xml:
-            schema:
-              $ref: "#/components/schemas/User"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/User"
-      responses:
-        default:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-            application/xml:
-              schema:
-                $ref: "#/components/schemas/User"
-  /user/createWithList:
-    post:
-      tags:
-        - user
-      summary: Creates list of users with given input array
-      description: Creates list of users with given input array
-      operationId: createUsersWithListInput
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: "#/components/schemas/User"
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-            application/xml:
-              schema:
-                $ref: "#/components/schemas/User"
-        default:
-          description: successful operation
-  /user/login:
-    get:
-      tags:
-        - user
-      summary: Logs user into the system
-      description: ""
-      operationId: loginUser
-      parameters:
-        - name: username
-          in: query
-          description: The user name for login
-          required: false
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: false
-          schema:
-            type: string
-      responses:
-        "200":
-          description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
-          content:
-            application/xml:
-              schema:
-                type: string
-            application/json:
-              schema:
-                type: string
-        "400":
-          description: Invalid username/password supplied
-  /user/logout:
-    get:
-      tags:
-        - user
-      summary: Logs out current logged in user session
-      description: ""
-      operationId: logoutUser
-      parameters: []
-      responses:
-        default:
-          description: successful operation
-  /user/{username}:
-    get:
-      tags:
-        - user
-      summary: Get user by user name
-      description: ""
-      operationId: getUserByName
-      parameters:
-        - name: username
-          in: path
-          description: "The name that needs to be fetched. Use user1 for testing. "
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-            application/xml:
-              schema:
-                $ref: "#/components/schemas/User"
-        "400":
-          description: Invalid username supplied
-        "404":
-          description: User not found
-    put:
-      tags:
-        - user
-      summary: Update user
-      description: This can only be done by the logged in user.
-      operationId: updateUser
-      parameters:
-        - name: username
-          in: path
-          description: name that need to be deleted
-          required: true
-          schema:
-            type: string
-      requestBody:
-        description: Update an existent user in the store
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/User"
-          application/xml:
-            schema:
-              $ref: "#/components/schemas/User"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/User"
-      responses:
-        default:
-          description: successful operation
-    delete:
-      tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-        - name: username
-          in: path
-          description: The name that needs to be deleted
-          required: true
-          schema:
-            type: string
-      responses:
-        "400":
-          description: Invalid username supplied
-        "404":
-          description: User not found
+          description: Invalid supportStaff_id supplied
 components:
   schemas:
     Staff:
@@ -1298,127 +1074,3 @@ components:
         salary:
           type: integer
           example: 294620556
-    User:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        username:
-          type: string
-          example: theUser
-        firstName:
-          type: string
-          example: John
-        lastName:
-          type: string
-          example: James
-        email:
-          type: string
-          example: john@email.com
-        password:
-          type: string
-          example: "12345"
-        phone:
-          type: string
-          example: "12345"
-        userStatus:
-          type: integer
-          description: User Status
-          format: int32
-          example: 1
-      xml:
-        name: user
-    Tag:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-      xml:
-        name: tag
-    Pet:
-      required:
-        - name
-        - photoUrls
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        name:
-          type: string
-          example: doggie
-        category:
-          $ref: "#/components/schemas/Category"
-        photoUrls:
-          type: array
-          xml:
-            wrapped: true
-          items:
-            type: string
-            xml:
-              name: photoUrl
-        tags:
-          type: array
-          xml:
-            wrapped: true
-          items:
-            $ref: "#/components/schemas/Tag"
-        status:
-          type: string
-          description: pet status in the store
-          enum:
-            - available
-            - pending
-            - sold
-      xml:
-        name: pet
-    ApiResponse:
-      type: object
-      properties:
-        code:
-          type: integer
-          format: int32
-        type:
-          type: string
-        message:
-          type: string
-      xml:
-        name: "##default"
-
-  requestBodies:
-    Pet:
-      description: Pet object that needs to be added to the store
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/Pet"
-        application/xml:
-          schema:
-            $ref: "#/components/schemas/Pet"
-    UserArray:
-      description: List of user object
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: "#/components/schemas/User"
-  securitySchemes:
-    petstore_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
